--- a/emulsion.fsproj
+++ b/emulsion.fsproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="EmulsionSettings.fs" />
     <Compile Include="SharpXmppHelper.fs" />
     <Compile Include="Robot.fs" />
     <Compile Include="Telegram.fs" />
@@ -13,6 +14,8 @@
     <PackageReference Include="Funogram" Version="1.1.3-alpha" />
     <PackageReference Include="FSharp.Core" Version="4.2.1" />
     <PackageReference Include="FSharp.NET.Sdk" Version="1.0.*" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
     <PackageReference Include="SharpXMPP.Shared" Version="0.0.1-pre01" />
   </ItemGroup>
 </Project>
