#4: extract Core to its own module; add a test

--- a/Emulsion/Emulsion.fsproj
+++ b/Emulsion/Emulsion.fsproj
@@ -9,6 +9,7 @@
     <Compile Include="SharpXmppHelper.fs" />
     <Compile Include="Robot.fs" />
     <Compile Include="Telegram.fs" />
+    <Compile Include="Core.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
