--- a/Emulsion/Emulsion.fsproj
+++ b/Emulsion/Emulsion.fsproj
@@ -9,11 +9,15 @@
     <Compile Include="SharpXmppHelper.fs" />
     <Compile Include="Robot.fs" />
     <Compile Include="Telegram.fs" />
-    <Compile Include="Core.fs" />
+    <Compile Include="Actors/Factories.fs" />
+    <Compile Include="Actors/SyncTaskWatcher.fs" />
+    <Compile Include="Actors/Core.fs" />
+    <Compile Include="Actors/Telegram.fs" />
+    <Compile Include="Actors/Xmpp.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Akka.FSharp" Version="1.2.3" />
+    <PackageReference Include="Akka" Version="1.3.2" />
     <PackageReference Include="Funogram" Version="1.1.3-alpha" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
