--- a/Emulsion.Tests/Emulsion.Tests.fsproj
+++ b/Emulsion.Tests/Emulsion.Tests.fsproj
@@ -8,6 +8,7 @@
     <Compile Include="Actors/Core.fs" />
     <Compile Include="Actors/SyncTaskWatcher.fs" />
     <Compile Include="Actors/Telegram.fs" />
+    <Compile Include="Actors/Xmpp.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
