--- a/Emulsion/Emulsion.fsproj
+++ b/Emulsion/Emulsion.fsproj
@@ -6,9 +6,10 @@
   <ItemGroup>
     <Compile Include="EmulsionSettings.fs" />
     <Compile Include="Message.fs" />
-    <Compile Include="SharpXmppHelper.fs" />
-    <Compile Include="Robot.fs" />
     <Compile Include="Telegram.fs" />
+    <Compile Include="Xmpp/SharpXmppHelper.fs" />
+    <Compile Include="Xmpp/Robot.fs" />
+    <Compile Include="Xmpp/Module.fs" />
     <Compile Include="Actors/Factories.fs" />
     <Compile Include="Actors/SyncTaskWatcher.fs" />
     <Compile Include="Actors/Core.fs" />
