#14: refactor XmppClient module in a more FP-oriented way

--- a/Emulsion/Emulsion.fsproj
+++ b/Emulsion/Emulsion.fsproj
@@ -8,7 +8,7 @@
     <Compile Include="Message.fs" />
     <Compile Include="Telegram.fs" />
     <Compile Include="Xmpp/SharpXmppHelper.fs" />
-    <Compile Include="Xmpp/Robot.fs" />
+    <Compile Include="Xmpp\XmppClient.fs" />
     <Compile Include="Xmpp/Module.fs" />
     <Compile Include="Actors/Factories.fs" />
     <Compile Include="Actors/SyncTaskWatcher.fs" />
