--- a/Emulsion/Emulsion.fsproj
+++ b/Emulsion/Emulsion.fsproj
@@ -22,6 +22,6 @@
     <PackageReference Include="Funogram" Version="1.1.3-alpha" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
-    <PackageReference Include="SharpXMPP.Shared" Version="0.0.1-pre02" />
+    <PackageReference Include="SharpXMPP" Version="0.0.1" />
   </ItemGroup>
 </Project>
