--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: csharp
 os: linux
-dist: trusty
+dist: bionic
 env:
     global:
         - DOTNET_SKIP_FIRST_TIME_EXPERIENCE=1
         - DOTNET_CLI_TELEMETRY_OPTOUT=1
-dotnet: 2.0.0
+mono: none
+dotnet: 2.2
 script:
     - dotnet build
     - dotnet test Emulsion.Tests
