Mass renames around Telegram and XMPP clients (#21)

--- a/Emulsion.Tests/Emulsion.Tests.fsproj
+++ b/Emulsion.Tests/Emulsion.Tests.fsproj
@@ -11,7 +11,7 @@
     <Compile Include="Actors/Xmpp.fs" />
     <Compile Include="Xmpp/SharpXmppHelper.fs" />
     <Compile Include="Telegram\Html.fs" />
-    <Compile Include="Telegram\TelegramClient.fs" />
+    <Compile Include="Telegram\Funogram.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Akka.TestKit" Version="1.3.12" />
