--- a/Emulsion/Emulsion.fsproj
+++ b/Emulsion/Emulsion.fsproj
@@ -8,11 +8,11 @@
     <Compile Include="EmulsionSettings.fs" />
     <Compile Include="Message.fs" />
     <Compile Include="Telegram\Html.fs" />
-    <Compile Include="Telegram\TelegramClient.fs" />
-    <Compile Include="Telegram\Module.fs" />
+    <Compile Include="Telegram\Funogram.fs" />
+    <Compile Include="Telegram\Client.fs" />
     <Compile Include="Xmpp/SharpXmppHelper.fs" />
     <Compile Include="Xmpp/XmppClient.fs" />
-    <Compile Include="Xmpp/Module.fs" />
+    <Compile Include="Xmpp\Client.fs" />
     <Compile Include="Actors/Factories.fs" />
     <Compile Include="Actors/SyncTaskWatcher.fs" />
     <Compile Include="Actors/Core.fs" />
