First draft of IMessageSystem, wrapRun utility for IMessageSystem implementations (#29)

--- a/Emulsion.Tests/Emulsion.Tests.fsproj
+++ b/Emulsion.Tests/Emulsion.Tests.fsproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Settings.fs" />
+    <Compile Include="MessageSystem.fs" />
     <Compile Include="Actors/Core.fs" />
     <Compile Include="Actors/SyncTaskWatcher.fs" />
     <Compile Include="Actors/Telegram.fs" />
