Add tests for MessageSender (#29)

--- a/Emulsion.Tests/Emulsion.Tests.fsproj
+++ b/Emulsion.Tests/Emulsion.Tests.fsproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Settings.fs" />
-    <Compile Include="MessageSystem.fs" />
+    <Compile Include="MessageSenderTests.fs" />
+    <Compile Include="MessageSystemTests.fs" />
     <Compile Include="Actors/Core.fs" />
     <Compile Include="Actors/SyncTaskWatcher.fs" />
     <Compile Include="Actors/Telegram.fs" />
