--- a/Emulsion/Emulsion.fsproj
+++ b/Emulsion/Emulsion.fsproj
@@ -31,6 +31,7 @@
     <PackageReference Include="Akka" Version="1.3.12" />
     <PackageReference Include="FSharpx.Collections" Version="2.0.0" />
     <PackageReference Include="Funogram" Version="1.1.3-alpha" />
+    <PackageReference Include="JetBrains.Lifetimes" Version="1.0.0-preview1-6" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
     <PackageReference Include="Serilog" Version="2.8.0" />
