--- a/Emulsion.Tests/Emulsion.Tests.fsproj
+++ b/Emulsion.Tests/Emulsion.Tests.fsproj
@@ -7,6 +7,7 @@
     <Compile Include="TestUtils\LockedBuffer.fs" />
     <Compile Include="TestUtils\Logging.fs" />
     <Compile Include="TestUtils\Waiter.fs" />
+    <Compile Include="ExceptionUtilsTests.fs" />
     <Compile Include="Settings.fs" />
     <Compile Include="MessageSenderTests.fs" />
     <Compile Include="Actors/Core.fs" />
