Update Funogram to 2.0.0-preview1

--- a/Emulsion/Emulsion.fsproj
+++ b/Emulsion/Emulsion.fsproj
@@ -32,7 +32,8 @@
   <ItemGroup>
     <PackageReference Include="Akka" Version="1.3.12" />
     <PackageReference Include="FSharpx.Collections" Version="2.0.0" />
-    <PackageReference Include="Funogram" Version="1.3.3" />
+    <PackageReference Include="Funogram" Version="2.0.0-preview1" />
+    <PackageReference Include="Funogram.Telegram" Version="4.4.0" />
     <PackageReference Include="JetBrains.Lifetimes" Version="1.0.0-preview3-14" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
