--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,6 @@
-os: Visual Studio 2019
+image:
+    - Visual Studio 2019
+    - Ubuntu
 skip_branch_with_pr: true
 environment:
     DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
