--- a/Emulsion/Emulsion.fsproj
+++ b/Emulsion/Emulsion.fsproj
@@ -34,7 +34,7 @@
     <PackageReference Include="FSharpx.Collections" Version="2.0.0" />
     <PackageReference Include="Funogram" Version="2.0.2" />
     <PackageReference Include="Funogram.Telegram" Version="4.4.2.1" />
-    <PackageReference Include="JetBrains.Lifetimes" Version="1.0.0-preview3-14" />
+    <PackageReference Include="JetBrains.Lifetimes" Version="2020.2.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
     <PackageReference Include="Serilog" Version="2.8.0" />
