--- a/Emulsion.Tests/Emulsion.Tests.fsproj
+++ b/Emulsion.Tests/Emulsion.Tests.fsproj
@@ -21,6 +21,7 @@
     <Compile Include="Xmpp\XmppClientFactory.fs" />
     <Compile Include="Xmpp\XmppMessageFactory.fs" />
     <Compile Include="Xmpp\XmppClientTests.fs" />
+    <Compile Include="Xmpp\XmppClientRoomTests.fs" />
     <Compile Include="Xmpp\SharpXmppHelperTests.fs" />
     <Compile Include="Xmpp\EmulsionXmppTests.fs" />
   </ItemGroup>
