--- a/Emulsion/Emulsion.fsproj
+++ b/Emulsion/Emulsion.fsproj
@@ -20,6 +20,7 @@
     <Compile Include="Xmpp\Types.fs" />
     <Compile Include="Xmpp/SharpXmppHelper.fs" />
     <Compile Include="Xmpp\XmppClient.fs" />
+    <Compile Include="Xmpp\SharpXmppPingHandler.fs" />
     <Compile Include="Xmpp\SharpXmppClient.fs" />
     <Compile Include="Xmpp\EmulsionXmpp.fs" />
     <Compile Include="Xmpp\XmppMessageSystem.fs" />
@@ -40,6 +41,6 @@
     <PackageReference Include="Serilog" Version="2.8.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
-    <PackageReference Include="SharpXMPP" Version="0.1.0" />
+    <PackageReference Include="SharpXMPP" Version="0.2.0-pre" />
   </ItemGroup>
 </Project>
