--- a/Emulsion/Emulsion.fsproj
+++ b/Emulsion/Emulsion.fsproj
@@ -41,6 +41,6 @@
     <PackageReference Include="Serilog" Version="2.8.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
-    <PackageReference Include="SharpXMPP" Version="0.2.0-pre" />
+    <PackageReference Include="SharpXMPP" Version="0.2.0" />
   </ItemGroup>
 </Project>
