--- a/Emulsion.Tests/Emulsion.Tests.fsproj
+++ b/Emulsion.Tests/Emulsion.Tests.fsproj
@@ -26,6 +26,7 @@
     <Compile Include="Xmpp\SharpXmppHelperTests.fs" />
     <Compile Include="Xmpp\SharpXmppPingHandlerTests.fs" />
     <Compile Include="Xmpp\EmulsionXmppTests.fs" />
+    <Compile Include="Database\InitializerTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Akka.TestKit" Version="1.3.12" />
@@ -37,5 +38,6 @@
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
     <ProjectReference Include="../Emulsion/Emulsion.fsproj" />
+    <ProjectReference Include="..\Emulsion.Database\Emulsion.Database.fsproj" />
   </ItemGroup>
 </Project>
