(#147) ContentStorage: draft API for link storage

--- a/Emulsion.ContentProxy/Emulsion.ContentProxy.fsproj
+++ b/Emulsion.ContentProxy/Emulsion.ContentProxy.fsproj
@@ -8,4 +8,12 @@
     <PackageReference Include="Nanoid" Version="2.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Include="ContentStorage.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Emulsion.Database\Emulsion.Database.fsproj" />
+  </ItemGroup>
+
 </Project>
