--- a/Emulsion.Database/Emulsion.Database.fsproj
+++ b/Emulsion.Database/Emulsion.Database.fsproj
@@ -9,6 +9,7 @@
         <Compile Include="EmulsionDbContext.fs" />
         <Compile Include="Migrations\*.fs" />
         <Compile Include="Initializer.fs" />
+        <Compile Include="DatabaseSettings.fs" />
         <Compile Include="DataStorage.fs" />
     </ItemGroup>
 
