--- a/Emulsion.Database/Emulsion.Database.fsproj
+++ b/Emulsion.Database/Emulsion.Database.fsproj
@@ -11,6 +11,7 @@
         <Compile Include="Initializer.fs" />
         <Compile Include="DatabaseSettings.fs" />
         <Compile Include="DataStorage.fs" />
+        <Compile Include="QueryableEx.fs" />
     </ItemGroup>
 
     <ItemGroup>
