(#147) LinkGenerator: use the hosting settings for real

--- a/Emulsion.ContentProxy/Emulsion.ContentProxy.fsproj
+++ b/Emulsion.ContentProxy/Emulsion.ContentProxy.fsproj
@@ -5,11 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Proxy.fs" />
     <Compile Include="ContentStorage.fs" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Emulsion.Database\Emulsion.Database.fsproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Hashids.net" Version="1.4.1" />
   </ItemGroup>
 
 </Project>
