(#147) Web: add and enable a web project template

--- a/Emulsion/Emulsion.fsproj
+++ b/Emulsion/Emulsion.fsproj
@@ -46,5 +46,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Emulsion.ContentProxy\Emulsion.ContentProxy.fsproj" />
+    <ProjectReference Include="..\Emulsion.Web\Emulsion.Web.fsproj" />
   </ItemGroup>
 </Project>
