--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 6.0.x
-      - name: NuGet Cache
+      - name: NuGet cache
         uses: actions/cache@v2
         with:
           path: ${{ env.NUGET_PACKAGES }}
