(#102) Web: add a dependency on Telegram link resolver

--- a/Emulsion.Tests/Emulsion.Tests.fsproj
+++ b/Emulsion.Tests/Emulsion.Tests.fsproj
@@ -9,6 +9,7 @@
     <Compile Include="TestUtils\Waiter.fs" />
     <Compile Include="TestUtils\TestDataStorage.fs" />
     <Compile Include="TestUtils\Exceptions.fs" />
+    <Compile Include="TestUtils\TelegramClientMock.fs" />
     <Compile Include="ExceptionUtilsTests.fs" />
     <Compile Include="LifetimesTests.fs" />
     <Compile Include="MessageSenderTests.fs" />
