--- a/Emulsion.ContentProxy/Emulsion.ContentProxy.fsproj
+++ b/Emulsion.ContentProxy/Emulsion.ContentProxy.fsproj
@@ -7,14 +7,17 @@
   <ItemGroup>
     <Compile Include="Proxy.fs" />
     <Compile Include="ContentStorage.fs" />
+    <Compile Include="FileCache.fs" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Emulsion.Database\Emulsion.Database.fsproj" />
+    <ProjectReference Include="..\Emulsion.Settings\Emulsion.Settings.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Hashids.net" Version="1.4.1" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
   </ItemGroup>
 
 </Project>
