(#102) FileCacheTests: preliminary test API

--- a/Emulsion.Tests/Emulsion.Tests.fsproj
+++ b/Emulsion.Tests/Emulsion.Tests.fsproj
@@ -10,6 +10,7 @@
     <Compile Include="TestUtils\TestDataStorage.fs" />
     <Compile Include="TestUtils\Exceptions.fs" />
     <Compile Include="TestUtils\TelegramClientMock.fs" />
+    <Compile Include="TestUtils\WebFileStorage.fs" />
     <Compile Include="ExceptionUtilsTests.fs" />
     <Compile Include="LifetimesTests.fs" />
     <Compile Include="MessageSenderTests.fs" />
