--- a/Emulsion.TestFramework/Emulsion.TestFramework.fsproj
+++ b/Emulsion.TestFramework/Emulsion.TestFramework.fsproj
@@ -15,7 +15,8 @@
     <Compile Include="TelegramClientMock.fs" />
     <Compile Include="WebFileStorage.fs" />
     <Compile Include="SimpleHttpClientFactory.fs" />
-    <Compile Include="TestFileCache.fs" />
+    <Compile Include="FileCacheUtil.fs" />
+    <Compile Include="StreamUtils.fs" />
   </ItemGroup>
 
   <ItemGroup>
