(#102) ContentController: make it work in manual tests

--- a/Emulsion.ContentProxy/Emulsion.ContentProxy.fsproj
+++ b/Emulsion.ContentProxy/Emulsion.ContentProxy.fsproj
@@ -8,6 +8,7 @@
     <Compile Include="Proxy.fs" />
     <Compile Include="ContentStorage.fs" />
     <Compile Include="FileCache.fs" />
+    <Compile Include="SimpleHttpClientFactory.fs" />
   </ItemGroup>
 
   <ItemGroup>
