--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       NUGET_PACKAGES: ${{ github.workspace }}/.github/nuget-packages
     steps:
       - uses: actions/checkout@v2
-      - name: Setup .NET SDK
+      - name: Set up .NET SDK
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 6.0.x
@@ -35,6 +35,14 @@ jobs:
           key: ${{ runner.os }}.nuget.${{ hashFiles('**/*.fsproj') }}
       - name: Build
         run: dotnet build
+      - name: Install dotnet dump
+        run: dotnet tool install --global dotnet-dump
       - name: Test
         run: dotnet test
         timeout-minutes: 10
+      - name: Upload test dumps
+        uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: test-dumps
+          path: "*.dmp"
