--- a/Emulsion.TestFramework/Emulsion.TestFramework.fsproj
+++ b/Emulsion.TestFramework/Emulsion.TestFramework.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Dumps.fs" />
     <Compile Include="LockedBuffer.fs" />
     <Compile Include="Logging.fs" />
     <Compile Include="Waiter.fs" />
