--- a/Emulsion/Emulsion.fsproj
+++ b/Emulsion/Emulsion.fsproj
@@ -8,6 +8,7 @@
     <Compile Include="Logging.fs" />
     <Compile Include="Lifetimes.fs" />
     <Compile Include="ExceptionUtils.fs" />
+    <Compile Include="MessageArchive.fs" />
     <Compile Include="Xmpp\Types.fs" />
     <Compile Include="Xmpp/SharpXmppHelper.fs" />
     <Compile Include="Xmpp\XmppClient.fs" />
