(#138) History: implement a simple controller in the web module

--- a/Emulsion.Web/Emulsion.Web.fsproj
+++ b/Emulsion.Web/Emulsion.Web.fsproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Compile Include="ContentController.fs" />
+    <Compile Include="HistoryController.fs" />
     <Compile Include="WebServer.fs" />
   </ItemGroup>
 
