(#138) MessageArchive: include the frontend into web server build

--- a/Emulsion.Web/Emulsion.Web.fsproj
+++ b/Emulsion.Web/Emulsion.Web.fsproj
@@ -8,6 +8,7 @@
     <Compile Include="ContentController.fs" />
     <Compile Include="HistoryController.fs" />
     <Compile Include="WebServer.fs" />
+    <Content Include="..\Emulsion.MessageArchive.Frontend\bin\**\*" LinkBase="wwwroot" CopyToOutputDirectory="Always" />
   </ItemGroup>
 
   <ItemGroup>
