--- a/Emulsion.MessageArchive.Frontend/package.json
+++ b/Emulsion.MessageArchive.Frontend/package.json
@@ -1,18 +1,16 @@
 {
     "scripts": {
-        "build": "rollup --config"
+        "build": "parcel build --public-url ./ --cache-dir obj/.parcel-cache --dist-dir bin"
     },
+    "source": "index.html",
     "type": "module",
     "devDependencies": {
-        "@rollup/plugin-commonjs": "^25.0.2",
-        "@rollup/plugin-node-resolve": "^15.1.0",
-        "@rollup/plugin-typescript": "^11.1.2",
         "@types/react": "^18.2.14",
         "@types/react-dom": "^18.2.6",
+        "parcel": "^2.9.3",
+        "process": "^0.11.10",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "rollup": "^3.26.0",
-        "rollup-plugin-copy": "^3.4.0",
         "typescript": "^5.1.6"
     }
 }
