--- a/Emulsion/Emulsion.fsproj
+++ b/Emulsion/Emulsion.fsproj
@@ -21,6 +21,9 @@
     <Compile Include="Actors/Telegram.fs" />
     <Compile Include="Actors/Xmpp.fs" />
     <Compile Include="Program.fs" />
+
+    <Content Include="..\Emulsion.MessageArchive.Frontend\bin\**\*" LinkBase="wwwroot"
+             CopyToOutputDirectory="Always" CopyToPublishDirectory="Always" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Akka" Version="1.4.46" />
