--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,4 +2,11 @@
     <PropertyGroup>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
+
+    <PropertyGroup Condition="$(MSBuildPRojectExtension) == '.fsproj'">
+        <DisableImplicitFSharpCoreReference>true</DisableImplicitFSharpCoreReference>
+    </PropertyGroup>
+    <ItemGroup Condition="$(MSBuildPRojectExtension) == '.fsproj'">
+        <PackageReference Include="FSharp.Core" Version="8.0.101" />
+    </ItemGroup>
 </Project>
