Core: new channel-based implementation

--- a/Emulsion/Emulsion.fsproj
+++ b/Emulsion/Emulsion.fsproj
@@ -21,6 +21,7 @@
     <Compile Include="Actors/Telegram.fs" />
     <Compile Include="Actors/Xmpp.fs" />
     <Compile Include="Program.fs" />
+    <Compile Include="MessagingCore.fs" />
 
     <Content Include="..\Emulsion.MessageArchive.Frontend\bin\**\*" LinkBase="wwwroot"
              CopyToOutputDirectory="Always" CopyToPublishDirectory="Always" />
