--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,14 +15,26 @@ jobs:
   publish:
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v4
+      - name: Extract metadata for Docker
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: |
+            codingteam/emulsion
+          tags: |
+            type=ref,event=branch
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and Push Docker Images
         uses: docker/build-push-action@v5
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: codingteam/emulsion
           tag_with_ref: true
-          tags: latest
+          tags: |
+            ${{ steps.meta.outputs.tags }}
+            codingteam/emulsion:latest
           push: ${{ github.event_name == 'push' && contains(github.ref, 'refs/tags/') && 'true' || 'false' }}
