--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,6 +16,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Extract metadata for Docker
+        if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
         id: meta
         uses: docker/metadata-action@v3
         with:
@@ -25,6 +26,7 @@ jobs:
             type=ref,event=branch
 
       - name: Login to Docker Hub
+        if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -33,7 +35,6 @@ jobs:
       - name: Build and Push Docker Images
         uses: docker/build-push-action@v5
         with:
-          tag_with_ref: true
           tags: |
             ${{ steps.meta.outputs.tags }}
             codingteam/emulsion:latest
