(#220) Tests: better mode of signal waiting

--- a/Emulsion.TestFramework/Emulsion.TestFramework.fsproj
+++ b/Emulsion.TestFramework/Emulsion.TestFramework.fsproj
@@ -16,6 +16,7 @@
     <Compile Include="WebFileStorage.fs" />
     <Compile Include="FileCacheUtil.fs" />
     <Compile Include="StreamUtils.fs" />
+    <Compile Include="Signals.fs" />
   </ItemGroup>
 
   <ItemGroup>
