--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,26 @@ jobs:
           name: changelog-section.md
           path: ./changelog-section.md
 
+      - name: Set up .NET SDK
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
+      - name: NuGet cache
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.NUGET_PACKAGES }}
+          key: ${{ runner.os }}.nuget.${{ hashFiles('**/*.fsproj') }}
+      - name: Publish
+        run: dotnet publish Emulsion --output publish -p:UseAppHost=false
+      - name: Pack
+        shell: pwsh
+        run: Compress-Archive -Path publish -DestinationPath emulsion-${{ steps.version.outputs.version }}.zip
+
+      - name: Upload the pack result
+        uses: actions/upload-artifact@v4
+        with:
+          path: emulsion-${{ steps.version.outputs.version }}.zip
+
       - name: Create a release
         if: startsWith(github.ref, 'refs/tags/v')
         # noinspection SpellCheckingInspection
@@ -42,3 +62,5 @@ jobs:
         with:
           name: Emulsion v${{ steps.version.outputs.version }}
           body_path: ./changelog-section.md
+          files: |
+            emulsion-${{ steps.version.outputs.version }}.zip
