TestFramework: bump System.Text.RegularExpressions

--- a/Emulsion.TestFramework/Emulsion.TestFramework.fsproj
+++ b/Emulsion.TestFramework/Emulsion.TestFramework.fsproj
@@ -28,6 +28,7 @@ SPDX-License-Identifier: MIT
 
   <ItemGroup>
     <PackageReference Include="Serilog.Sinks.XUnit" Version="3.0.5" />
+    <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
     <ProjectReference Include="..\Emulsion.Database\Emulsion.Database.fsproj" />
     <ProjectReference Include="..\Emulsion.Telegram\Emulsion.Telegram.fsproj" />
   </ItemGroup>
