--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,15 +19,13 @@ jobs:
   publish:
     runs-on: ubuntu-22.04
     steps:
-      - name: Extract metadata for Docker
-        if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            codingteam/emulsion
-          tags: |
-            type=ref,event=branch
+      - name: Clone the repository
+        uses: actions/checkout@v4
+
+      - name: Read version from ref
+        id: version
+        shell: pwsh
+        run: echo "version=$(./scripts/Get-Version.ps1 -RefName $env:GITHUB_REF)" >> $env:GITHUB_OUTPUT
 
       - name: Login to Docker Hub
         if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
@@ -39,7 +37,5 @@ jobs:
       - name: Build and Push Docker Images
         uses: docker/build-push-action@v6
         with:
-          tags: |
-            ${{ steps.meta.outputs.tags }}
-            codingteam/emulsion:latest
+          tags: codingteam/emulsion:latest,codingteam/emulsion:v${{ steps.version.outputs.version }}
           push: ${{ github.event_name == 'push' && contains(github.ref, 'refs/tags/') && 'true' || 'false' }}
