--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,13 +15,17 @@ on:
 
 jobs:
   main:
-    runs-on: ${{ matrix.environment }}
     strategy:
       matrix:
         environment:
-          - macos-14
-          - ubuntu-24.04
-          - windows-2022
+          - name: macos
+            image: macos-14
+          - name: linux
+            image: ubuntu-24.04
+          - name: windows
+            image: windows-2022
+    name: main.${{ matrix.environment.name }}
+    runs-on: ${{ matrix.environment.image }}
     env:
       DOTNET_NOLOGO: 1
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
