(#430) Connect the issue with a TODO

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,8 @@ jobs:
         uses: actions/setup-dotnet@v5
         with:
           dotnet-version: 9.0.x
-      - if: runner.os != 'macOS' # TODO: Re-enable this back after https://github.com/actions/runner-images/issues/13341
-                                 #       is resolved.
+      - if: runner.os != 'macOS' # TODO[#430]: Re-enable this back after https://github.com/actions/runner-images/issues/13341
+                                 #             is resolved.
         name: NuGet cache
         uses: actions/cache@v4
         with:
