--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,7 +16,7 @@ on:
     - cron: '0 0 * * 6' # every Saturday
 
 jobs:
-  publish:
+  docker-publish:
     runs-on: ubuntu-24.04
     steps:
       - name: Clone the repository
