--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: 2024 Emulsion contributors <https://github.com/codingteam/emulsion>
+# SPDX-FileCopyrightText: 2024-2026 Emulsion contributors <https://github.com/codingteam/emulsion>
 #
 # SPDX-License-Identifier: MIT
 
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - master
+      - renovate/**
     tags:
       - 'v*'
   pull_request:
